# Cam-IMU-Sync

./: README.md
arducam_usb2_ros/camera_config_files/: MT9V034_VGA.json  MT9V034_VGA_master.json
arducam_usb2_ros/launch/: arducam_node.launch  arducam_trigger.launch  arducam_trigger_sync_mpu.launch  arducam_trigger_sync_px4.launch  px4.launch  trigger_capture_node.launch
arducam_usb2_ros/src/: arducam_ros_node.py  arducam_trigger_node.py  arducam_trigger_sync_node.py  arducam_trigger_sync_node_mavros.py
mpu9250_serial_to_imu/: CMakeLists.txt  package.xml
mpu9250_serial_to_imu/arduino/MPU9250/: MPU9250.ino
mpu9250_serial_to_imu/launch/: mpu9250.launch
mpu9250_serial_to_imu/src/: mpu9250_serial_to_imu_node.cpp
